# pymumble

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.rst
examples/: audio-only_client.py  echobot.py  music_bot.py  ping_serverinfo.py  talking_bot.py
pymumble_py3/: callbacks.py  commands.py  errors.py  mumble.py  mumble_pb2.py  soundqueue.py  test_crypto.py
src/mumble/: __init__.py  acl.py  audio.py  blobs.py  callbacks.py  channels.py  constants.py  crypto.py  errors.py  messages.py  mumble.py  receivedaudioqueue.py  sendaudio.py  soundoutput.py  soundqueue.py  test_crypto.py  users.py
src/pymumble/: channels.py  constants.py  crypto.py  mumble.py  mumble_pb2.py  mumbleudp_pb2.py  soundoutput.py  tools.py
tests/: cert.pem  key.pem  msgs.py  server.py  test_mumble.py  test_server_info.py
