[project]
name = "pymumble"
version = "2.0.0"
description = "Python Mumble library"
readme = "README.md"
authors = [
    { name = "oopsbagel", email = "oopsbagel@disroot.org" },
    { name = "Azlux", email = "github@azlux.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "opuslib==3.0.1",
    "protobuf>=5.29.2",
    "pycryptodome>=3.21.0",
    "pytest>=8.3.4",
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Exclude protoc generated source files.
exclude = ["*_pb2.py"]

[tool.pytest.ini_options]
pythonpath = "src/pymumble"
addopts = [
    "--import-mode=importlib",
]
